<resources>
    <string name="app_name">去特么的密码</string>
    <string name="action_note">点击阅读【隐私协议及免责声明】</string>
    <string name="action_note_1">1.首次使用,请返回点击【纯纯新用户】</string>
    <string name="action_note_2">2.老用户请登录后，前往设置配置自己的webdav账号</string>
    <string name="action_note_3">3.不再开放账号注册，老用户请尽快迁移数据至自己的webdav</string>
    <string name="action_note_4">4.本工具从当前版本开始，将完全转向纯工具应用，数据联网功能仅涉及用户本身的webdav配置、软件版本管理等信息。
        \n还在使用作者提供的数据存储服务的用户，请确认webdav备份完成后，删除保存在作者这边的所有数据</string>
    <string name="action_note_6">5.数据迁移截止时间为2023年6月底，届时APP将不再支持原账号登录功能和Bmob数据获取功能</string>
    <string name="action_note_7">6.去年就想让大家自己接管自己的数据了，一直懒~~/姚明笑</string>
    <string name="action_note_5">7.祝您食用开心(*^__^*)</string>
    <string name="action_note_jianguo_5">-1.此页面须填写的账号密码与webdav无关！！！</string>
    <string name="action_note_jianguo_6">0.老用户，请在【密钥】行填写此前app的登录密码，用于数据解密\n  新用户，请务必记住此密钥，将用于数据访问权限和重要数据的加解密</string>
    <string name="action_note_jianguo_1">1.请注意，本次输入账号密码不再校验正确性，仅本地存储后用于数据解密</string>
    <string name="action_note_jianguo_2">2.对于老用户，若密码填写错误，也能正常进入主界面，但会造成数据无法解密</string>
    <string name="action_note_jianguo_3">3.数据已在webdav备份后，可在此重新登录</string>

    <string name="error_pwd">密码错了哦~</string>
    <string name="error_no_item">好像没有这些Tag条目哟~</string>
    <string name="error_offline">离线状态下仅能查看信息哦~</string>

    <string name="copy">帐号、密码信息复制成功！</string>
    <string name="copy_account">帐号信息复制成功！</string>
    <string name="copy_password">密码信息复制成功！</string>
    <string name="copy_note">备注信息复制成功！</string>
    <string name="copy_web">网址信息复制成功！</string>
    <string name="nothing_copy">好像...啥也没复制到...ಥ_ಥ</string>
    <string name="share_note">一个极具个人隐私属性的云端密码记录APP。 这种东西，当然还是安全可靠最重要啦~ 赶紧来【醋安应用市场】搜索下载试试吧(*^__^*) \n https://www.coolapk.com/apk/cf.paradoxie.dizzypassword \n   ---From:【去特么的密码】By Paradoxie</string>
    <string name="web_site">http://www.jianshu.com/p/ab621a5c88fb</string>
    <string name="app_info">请认真阅读本《用户协议与隐私政策》（以下简称“协议”），确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。本协议约定『去特么的密码』应用开发者（以下简称“应用”）与用户之间关于“密码”软件服务（以下简称“服务“）的权利义务。“用户”是指注册、登录、使用本服务的个人。本协议可由应用随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本APP中查阅最新版协议条款。在修改协议条款后，如果用户不接受修改后的条款，请立即停止使用提供的服务，用户继续使用服务将被视为接受修改后的协议。\n

一、使用规则\n
1、用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表应用的观点、立场或政策，应用对此不承担任何责任。\n
2、用户不得利用本服务进行如下行为：\n
(1) 利用本服务从事任何违法犯罪活动的；\n
(2) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；\n
(3) 其他违反法律法规规定、侵犯其他用户合法权益、干扰正常运营或服务未明示授权的行为。\n
3、用户须对利用本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与应用无关。\n
如因此给应用或第三方造成损害的，用户应当依法予以赔偿。\n
4、应用提供的服务中可能包括广告，用户同意在使用过程中显示应用和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对该广告信息进行的交易负责，\n
对用户因该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，本服务不承担任何责任。\n\n

二、应用敏感权限说明\n
1、网络权限(INTERNET、ACCESS_NETWORK_STATE、ACCESS_WIFI_STATE)\n
用于数据基础访问和同步服务\n
2、文件读写权限(WRITE_EXTERNAL_STORAGE)\n
用于webdav服务的文件上传和下载\n\n

三、其他\n
1、应用郑重提醒用户注意本协议中免除责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。\n
2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和服务之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交服务住所地有管辖权的人民法院管辖。\n
3、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。\n\n

本《协议》版权由去特么的密码所有，保留一切对本《协议》解释的权利。

</string>
    <string name="on_item">好像还没有记录什么帐号信息，点击右下角添加吧(*^__^*)</string>
    <string name="offline">网络好像不可以哦~</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="error_login">您还木有登录哦~</string>
    <string name="succes_delete">搜索记录删除成功</string>
    <string name="no_item_name">好像没有叫这个名字的条目哦~试试Tag看看</string>
    <string name="str_copy">复制成功</string>
    <string name="test">导出，csv格式请点击右上角\n点击生成导出后，长按文本框，全选->复制，然后粘贴到目标文档。当前文本框为json格式导出，若要导入到其他app，请按照相应的导入规则更改数据结构即可。\n\n导入\n冒号前为key,后为value,引号为必需，key值必须，value可以为空\n正确导入格式：\n[{
	\"account\": \"帐号\",\n
	\"name\": \"条目名1\",\n
	\"note\": \"备注信息\",\n
	\"password\": \"密码\",\n
	\"tag\": [\"标签1\", \"标签2\", \"标签3\"],\n
	\"website\": \"网址信息\"\n
}, {\n
	\"account\": \"帐号\",\n
	\"name\": \"条目名2\",\n
	\"note\": \"备注信息\",\n
	\"password\": \"密码\",\n
	\"tag\": [\"标签2\", \"标签3\", \"标签4\", \"标签1\"],\n
	\"website\": \"网址信息\"\n
}]</string>
    <string name="tv_notify_1">已验证支持的webdav平台：(点击跳转查看教程)</string>
    <string name="tv_notify_2">1. infinicloud (https://infini-cloud.net/en/) </string>
    <string name="tv_notify_3">2. 坚果云 (https://www.jianguoyun.com/)</string>
    <string name="tv_notify">以坚果云为例，账号密码获取教程：\n 1.注册坚果云\n 2.登录后点击右上角用户名，选择【账户信息】\n 3.页面跳转后选择【安全选项】，右下方可见【第三方应用管理】\n 4.点击添加应用，生成密码\n 5.成功后来到本界面填写</string>
    <string name="tv_notify_4">其他平台请在酷安私我，验证后添加</string>
</resources>
