<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_label_bg_15"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_notify_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_notify_1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_notify_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_notify_2"
            android:textColor="?colorAccent" />

        <TextView
            android:id="@+id/tv_notify_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_notify_3"
            android:textColor="?colorAccent" />


    </LinearLayout>
    <TextView
        android:id="@+id/tv_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_label_bg_15"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:text="以坚果云为例，账号密码获取教程：\n
1.注册坚果云\n
2.登录后点击右上角用户名，选择【账户信息】\n
3.页面跳转后选择【安全选项】，右下方可见【第三方应用管理】\n
4.点击添加应用，生成密码\n
5.成功后来到本界面填写"
        android:textColor="@color/red400" />

    <cf.paradoxie.dizzypassword.view.ClearableEditText
        android:id="@+id/dialog_ed_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="https://dav.jianguoyun.com/dav/" />

    <cf.paradoxie.dizzypassword.view.ClearableEditText
        android:id="@+id/dialog_ed_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="输入webdav账户，webdav后台获取" />

    <cf.paradoxie.dizzypassword.view.ClearableEditText
        android:id="@+id/dialog_ed_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="输入webdav应用密码，webdav后台获取" />

</LinearLayout>